# titan

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
ai/: analyst.py  client.py  visual.py
config/: loader.py
config/systems/: backoffice.yaml  cosplay-space.yaml  ess.yaml  evoca-crm.yaml  example.yaml  idev-crm.yaml  idev-website.yaml  portal.yaml
core/: auth.py  crawler.py  runner.py
docs/: howTestMe.md
docs/examples/: case-manager.howTestMe.yaml
scenarios/: base.py  constants.py  runner.py
scenarios/case_manager/: __init__.py  cases.py  dashboard.py  files.py  helpers.py  selectors.py  settings.py  setup.py  suspects.py
storage/: baselines.py  reports.py
tests/: test_ai_client.py  test_base_scenario.py  test_baselines.py  test_config_loader.py  test_run_all_filter.py  test_security.py
